review/week7-services/domain-review/nginx-ingress.yaml
# Check the ingress docs
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: webone.com 
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webone-svc
            port:
              number: 80
  - host: webtwo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webtwo
            port:
              number: 80
